# libFoo-bar

./: Makefile.am  bar.c  build.sh  configure.ac  libFoo-bar.spec
.github/workflows/: rpm-build-assist.yml  sourcegit.yml
.rpm-build-assist/: build-assist.yaml
